# ai-learning-app

./: .gitignore  LICENSE  README.md  crew.py  main.py  pyproject.toml  test_agents.py  test_assessment_builder.py
config/: agents.yaml  tasks.yaml
frontend/public/: index.html  styles.css
frontend/src/: App.js  index.js  index.jsx
frontend/src/components/: Assessment.js  CourseCarousel.js  CourseOverview.js  Home.js  Lesson.js  ProgressTracker.js
frontend/src/styles/: base.css  main.css  utils.css
frontend/src/styles/components/: assessment.css  course-carousel.css  course-overview.css  home.css  lesson.css  progress-tracker.css
outputs/: course_Donald_Hoffman_20251018_223502.json  curriculum_20251018_223427.json  final_course_20251018_223427.json  lessons_20251018_223427.json
src/: progress_tracker.py  web_server.py
src/tools/: __init__.py  serper_tool.py
